# social-engineer-toolkit

./: README.md  SECURITY.md  pyproject.toml  setup.py
.github/: pull.yml
.github/workflows/: Python_tests.yml
docs/: lessons.md
modules/: ratte_module.py  ratte_only_module.py
readme/: CHANGELOG
src/autorun/: autolaunch.py
src/core/: payloadprep.py  setcore.py
src/core/msf_attacks/: create_payload.py
src/core/payloadgen/: create_payloads.py
src/core/ssl/: setssl.py
src/fasttrack/: mssql.py
src/html/: spawn.py
src/html/unsigned/: self_sign.py  verified_sign.py
src/payloads/set_payloads/: http_shell.py  listener.py  set_http_server.py
src/phishing/smtp/client/: smtp_client.py  smtp_web.py
src/qrcode/: qrgenerator.py
src/teensy/: binary2teensy.py  sd2teensy.py  teensy.py
src/webattack/dll_hijacking/: hijacking.py
src/webattack/harvester/: harvester.py  report_generator.py
src/webattack/java_applet/: sign_jar.py  unsigned.py
src/webattack/multi_attack/: multiattack.py
src/webattack/tabnabbing/: tabnabbing.py
tests/: test_functionality_fixes.py  test_packaging.py  test_release_metadata.py  test_runtime_compat.py
